[package]
name = "blobnom"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
config = { version = "0.15.11", features = ["toml"] }
fnv = "1.0.7"
futures = "0.3.31"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
